crawler: using URIs instead of strings